--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,4 +30,12 @@ body{
     width: 100%;
     height: 70vh;
 }
+#portfolio h5{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
    
