--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,6 +49,14 @@ body{
 
 
 }
+#portfolio img{
+   
+    width: 400px;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+}
+
 
 
    
