--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,44 +11,7 @@ body{
     justify-content: center;
     align-items: center;
 }
-.services{
+#services img{
     width: 100%;
-    height: 1000px;
-
+    height: fit-content;
 }
-.services h5{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-.services img{
-    width: 100%;
-    height: 100vh;
-}
-.whatwedo{
-    width: 100%;
-    height: 30vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.portfolio{
-    width: 100%;
-    height: 90vh;
-}
-.portfolio h5{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-
-}
-
-
-
-
-
-
