--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,17 +1,12 @@
 body{
     width: 100%;
     height: 100vh;
+    position: absolute;
 }
-.aboutus{
-    width: 100%;
-    height: 50vh;
+span{
+    visibility: hidden;
 }
-.aboutus h4{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#services img{
-    width: 100%;
-    height: fit-content;
+.col-md-3:hover{
+    transition: 0.5s;
+    color: aqua;
 }
