--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,24 @@
 body{
     width: 100%;
     height: 100vh;
-    position: absolute;
+    
+    font-family: 'Yantramanav', sans-serif;
 }
 span{
     visibility: hidden;
 }
+
+
 .col-md-3:hover{
     transition: 0.5s;
     color: aqua;
+}
+#services{
+    background-image: url(backgrounds/s_image.jpg);
+  background-size: cover;
+  text-align: center;
+  color: white;
+  font-size: small;
+  font-family: 'Yantramanav', sans-serif;
+    
 }
