--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,11 @@ body{
 span{
     display: none;
 }
+#id{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
 .col-md-3:hover{
@@ -15,6 +20,7 @@ span{
 }
 #services{
     background-image: url(/IMAGES/s_image.jpg);
+    background-size: cover;
    width: 100%;
    height: 20vh;
   text-align: center;
@@ -41,7 +47,7 @@ span{
     color: white ;
     overflow: hidden;
 }
-.Portfolio .col-md-3{
+.Portfolio .col-sm-12, col-md-4{
     display: flex;
     align-items: center;
     justify-content: center;
