--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,17 @@ body{
     
     
 }
+header{
+    background-image: url(/IMAGES/h_img.jpg);
+    background-size: cover;
+   width: 100%;
+   height: 100vh;
+  text-align: center;
+  color: white;
+  font-family: 'Yantramanav', sans-serif;
+    
+
+}
 span{
     display: none;
 }
