--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,6 +64,18 @@ span{
     justify-content: center;
     
 }
+.Contact-Us{
+    background-image: url(/IMAGES/c_image.jpg);
+
+   width: 100%;
+   height: 70vh;
+  text-align: center;
+  color: white;
+  font-size:xx-small;
+  font-family: 'Yantramanav', sans-serif;
+    
+
+}
 
 
 
